Adding support to stream videos in multiple browsers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,18 +15,16 @@
 
 
 
-  <!-- Resources -->
-  <div class="file-uploaders">
-    <div *ngIf="videoId !== '' && videoId !== null" >
-      <h2>Video Player</h2>
-      <video height="720" width="1280" controls>
-        <source [src]="videoUrl" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    
-    <app-single-file-upload></app-single-file-upload>
+<!-- Resources -->
+<div class="file-uploaders">
+  <div *ngIf="videoId">
+    <h2>Video Player</h2>
+    <app-video-player [videoUrl]="videoUrl"></app-video-player>
   </div>
+  <app-single-file-upload></app-single-file-upload>
+</div>
+
+
 
   <footer>
     <svg id="clouds" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
